Proper JPMS support and Java 18 DNS SPI
Closes #245